tests/lean/exitAfterParseError.lean.expected.out
exitAfterParseError.lean:5:0: error: expected ':=', 'where' or '|'
exitAfterParseError.lean:3:0-3:7: error: declaration body is missing
