tests/lean/exitAfterParseError.lean
new_frontend

def foo 

#exit

def bla
